--- a/index.html
+++ b/index.html
@@ -26,3 +26,5 @@ title: Home
     <span class="pagination-item newer">Newer</span>
   {% endif %}
 </div>
+
+{% include disqus-count-javascript.html %}
